--- a/index.html
+++ b/index.html
@@ -488,17 +488,18 @@
                 }
                 
                 let filesHtml = '';
-                const sortedDocs = [...jobFilesCache].sort((a,b) => (b.updatedAt?.toDate() || 0) - (a.updatedAt?.toDate() || 0));
+                const sortedDocs = [...jobFilesCache].sort((a,b) => (b.updatedAt?.toDate() ? b.updatedAt.toDate() : 0) - (a.updatedAt?.toDate() ? a.updatedAt.toDate() : 0));
 
                 sortedDocs.forEach((docData) => {
                     const deleteButton = currentUser.role === 'admin' ? `<button onclick="confirmDelete('${docData.id}')" class="bg-red-500 hover:bg-red-600 text-white font-bold py-1 px-3 rounded text-sm">Delete</button>` : '';
+                    const lastUpdated = docData.updatedAt?.toDate ? docData.updatedAt.toDate().toLocaleString() : 'N/A';
                     filesHtml += `
                         <div class="job-file-item border p-3 rounded-lg flex justify-between items-center bg-gray-50 hover:bg-gray-100" 
                              data-search-term="${(docData.jfn || '').toLowerCase()} ${(docData.sh || '').toLowerCase()} ${(docData.co || '').toLowerCase()}">
                             <div>
                                 <p class="font-bold text-indigo-700">${docData.jfn || 'No ID'}</p>
                                 <p class="text-sm text-gray-600">Shipper: ${docData.sh || 'N/A'} | Consignee: ${docData.co || 'N/A'}</p>
-                                <p class="text-xs text-gray-400">Last Updated: ${docData.updatedAt ? docData.updatedAt.toDate().toLocaleString() : 'N/A'}</p>
+                                <p class="text-xs text-gray-400">Last Updated: ${lastUpdated}</p>
                             </div>
                             <div class="space-x-2 flex-shrink-0">
                                 <button onclick="previewJobFileById('${docData.id}')" class="bg-blue-500 hover:bg-blue-600 text-white font-bold py-1 px-3 rounded text-sm">Preview</button>
@@ -886,7 +887,7 @@
             // Handle approval status
             const approveBtn = document.getElementById('approve-btn');
             if (data.approvedBy) {
-                const approvedDate = data.approvedAt ? ` on ${data.approvedAt.toDate().toLocaleDateString()}` : '';
+                const approvedDate = data.approvedAt?.toDate() ? ` on ${data.approvedAt.toDate().toLocaleDateString()}` : '';
                 setVal('approved-by', `${data.approvedBy}${approvedDate}`);
                 approveBtn.disabled = true;
                 approveBtn.textContent = 'Approved';
