--- a/index.html
+++ b/index.html
@@ -467,7 +467,24 @@
         async function handleSignUp(email, password, displayName) {
             showLoader();
             try {
-                await createUserWithEmailAndPassword(auth, email, password);
+                const userCredential = await createUserWithEmailAndPassword(auth, email, password);
+                const user = userCredential.user;
+
+                // The onAuthStateChanged listener will now handle creating the user doc with the display name
+                const userDocRef = doc(db, 'users', user.uid);
+                const usersCollectionRef = collection(db, 'users');
+                const userQuerySnapshot = await getDocs(usersCollectionRef);
+                const isFirstUser = userQuerySnapshot.size === 1; // It will be 1 after creation
+
+                const newUser = {
+                    email: user.email,
+                    displayName: displayName,
+                    role: isFirstUser ? 'admin' : 'user',
+                    status: isFirstUser ? 'active' : 'inactive',
+                    createdAt: serverTimestamp()
+                };
+                await setDoc(userDocRef, newUser);
+
                 showNotification("Account created! Waiting for admin approval.", false);
             } catch (error) {
                 console.error("Sign up error:", error);
@@ -538,7 +555,8 @@
             try {
                 const docRef = doc(db, 'jobfiles', jobFileNo);
                 await setDoc(docRef, checkData, { merge: true });
-                populateFormFromData({...(await getDoc(docRef)).data()});
+                const updatedDoc = await getDoc(docRef);
+                populateFormFromData(updatedDoc.data());
                 hideLoader();
                 showNotification("Job File Checked!");
             } catch (error) {
@@ -563,13 +581,15 @@
             const approvalData = {
                 approvedBy: currentUser.displayName,
                 approvedAt: serverTimestamp(),
-                status: 'approved'
+                status: 'approved',
+                rejectionReason: null // Clear rejection reason on approval
             };
             
             try {
                 const docRef = doc(db, 'jobfiles', jobFileNo);
                 await setDoc(docRef, approvalData, { merge: true });
-                populateFormFromData({...(await getDoc(docRef)).data()});
+                const updatedDoc = await getDoc(docRef);
+                populateFormFromData(updatedDoc.data());
                 hideLoader();
                 showNotification("Job File Approved!");
             } catch (error) {
@@ -598,7 +618,8 @@
             try {
                 const docRef = doc(db, 'jobfiles', jobFileNo);
                 await setDoc(docRef, rejectionData, { merge: true });
-                populateFormFromData({...(await getDoc(docRef)).data()});
+                const updatedDoc = await getDoc(docRef);
+                populateFormFromData(updatedDoc.data());
                 hideLoader();
                 closeModal('reject-reason-modal');
                 showNotification("Job File Rejected!");
@@ -1182,8 +1203,7 @@
             }
             
             // Handle approval/rejection status
-            const approveBtn = document.getElementById('approve-btn');
-            const rejectBtn = document.getElementById('reject-btn');
+            const approvalButtons = document.getElementById('approval-buttons');
             const approvedStamp = document.getElementById('approved-stamp');
             const rejectedStamp = document.getElementById('rejected-stamp');
             const rejectionBanner = document.getElementById('rejection-banner');
@@ -1191,17 +1211,23 @@
             approvedStamp.style.display = 'none';
             rejectedStamp.style.display = 'none';
             rejectionBanner.style.display = 'none';
-            document.getElementById('approval-buttons').style.display = 'flex';
+            approvalButtons.style.display = 'none';
+
+            if (currentUser.role === 'admin') {
+                approvalButtons.style.display = 'flex';
+            }
 
             if (data.status === 'approved') {
                 const approvedDate = data.approvedAt?.toDate() ? ` on ${data.approvedAt.toDate().toLocaleDateString()}` : '';
                 setVal('approved-by', `${data.approvedBy}${approvedDate}`);
-                document.getElementById('approval-buttons').style.display = 'none';
+                approvalButtons.style.display = 'none';
                 approvedStamp.style.display = 'block';
             } else if (data.status === 'rejected') {
                 const rejectedDate = data.rejectedAt?.toDate() ? ` on ${data.rejectedAt.toDate().toLocaleDateString()}` : '';
                 setVal('approved-by', `Rejected by ${data.rejectedBy}${rejectedDate}`);
-                document.getElementById('approval-buttons').style.display = 'none';
+                if (currentUser.role !== 'admin') {
+                    approvalButtons.style.display = 'none';
+                }
                 rejectedStamp.style.display = 'block';
                 rejectionBanner.style.display = 'block';
                 document.getElementById('rejection-reason').textContent = data.rejectionReason;
@@ -1246,6 +1272,14 @@
                 approvedByText = `${data.approvedBy} on ${data.approvedAt?.toDate().toLocaleDateString()}`;
             } else if (data.status === 'rejected') {
                 approvedByText = `REJECTED: ${data.rejectionReason}`;
+            }
+
+            const checkedStampHtml = data.checkedBy ? `<div class="stamp stamp-checked" style="display: block;">Checked</div>` : '';
+            let approvalStampHtml = '';
+            if (data.status === 'approved') {
+                approvalStampHtml = `<div class="stamp stamp-approved" style="display: block;">Approved</div>`;
+            } else if (data.status === 'rejected') {
+                approvalStampHtml = `<div class="stamp stamp-rejected" style="display: block;">Rejected</div>`;
             }
 
             const checkedSymbol = '☑';
@@ -1301,8 +1335,8 @@
                         </div>
                         <div class="col-span-12 bg-white p-1 text-xs" style="border: 1px solid #374151;"><strong>REMARKS:</strong><div class="print-field h-20">${(data.re || '').replace(/\n/g, '<br>')}</div></div>
                         <div class="col-span-3 bg-white p-1 text-xs" style="border: 1px solid #374151;"><strong>PREPARED BY:</strong><div class="print-field">${data.pb || ''}</div></div>
-                        <div class="col-span-3 bg-white p-1 text-xs" style="border: 1px solid #374151;"><strong>CHECKED BY:</strong><div class="print-field">${checkedByText}</div></div>
-                        <div class="col-span-3 bg-white p-1 text-xs" style="border: 1px solid #374151;"><strong>APPROVED BY:</strong><div class="print-field">${approvedByText}</div></div>
+                        <div class="col-span-3 bg-white p-1 text-xs relative" style="border: 1px solid #374151;">${checkedStampHtml}<strong>CHECKED BY:</strong><div class="print-field">${checkedByText}</div></div>
+                        <div class="col-span-3 bg-white p-1 text-xs relative" style="border: 1px solid #374151;">${approvalStampHtml}<strong>APPROVED BY:</strong><div class="print-field">${approvedByText}</div></div>
                         <div class="col-span-3 bg-white p-1 flex items-center justify-center" style="border: 1px solid #374151;"><div class="qrcode-container"></div></div>
                     </div>
                 </div>`;
