--- a/index.html
+++ b/index.html
@@ -366,9 +366,9 @@
                      <span>Analytics</span>
                  </button>
                  <button onclick="openClientManager()" class="bg-cyan-600 hover:bg-cyan-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:scale-105 flex items-center space-x-2">
-                    <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9 6a3 3 0 11-6 0 3 3 0 016 0zM17 6a3 3 0 11-6 0 3 3 0 016 0zM12.93 17c.046-.327.07-.66.07-1a6.97 6.97 0 00-1.5-4.33A5 5 0 0119 16v1h-6.07zM6 11a5 5 0 015 5v1H1v-1a5 5 0 015-5z" /></svg>
-                    <span>Clients</span>
-                </button>
+                     <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path d="M9 6a3 3 0 11-6 0 3 3 0 016 0zM17 6a3 3 0 11-6 0 3 3 0 016 0zM12.93 17c.046-.327.07-.66.07-1a6.97 6.97 0 00-1.5-4.33A5 5 0 0119 16v1h-6.07zM6 11a5 5 0 015 5v1H1v-1a5 5 0 015-5z" /></svg>
+                     <span>Clients</span>
+                 </button>
                  <button onclick="openFileManager()" class="bg-blue-600 hover:bg-blue-700 text-white font-bold py-3 px-6 rounded-lg shadow-lg transition-transform transform hover:scale-105 flex items-center space-x-2">
                      <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" viewBox="0 0 20 20" fill="currentColor"><path fill-rule="evenodd" d="M2 6a2 2 0 012-2h4l2 2h4a2 2 0 012 2v1H8a3 3 0 00-3 3v1.586l.293.293a1 1 0 001.414 0L10.414 12l-1.293 1.293a1 1 0 000 1.414l.293.293V16a2 2 0 01-2 2H4a2 2 0 01-2-2V6zm8 2a1 1 0 000-2H4a1 1 0 00-1 1v10a1 1 0 001 1h4a1 1 0 001-1v-1.586l-.293-.293a1 1 0 01-1.414 0L6.586 12l1.293-1.293a1 1 0 011.414 0l.293-.293V8z" clip-rule="evenodd" /><path d="M18 8a2 2 0 00-2-2h-4l-2-2h-4a2 2 0 00-2 2v.5a1 1 0 002 0V6a1 1 0 011-1h2.586l2 2H16a1 1 0 011 1v8a1 1 0 01-1 1h-2.5a1 1 0 100 2H16a2 2 0 002-2V8z" /></svg>
                      <span>File Manager</span>
@@ -1348,12 +1348,12 @@
 
             if (timeframe === 'year') {
                 filteredJobs = jobFilesCache.filter(job => {
-                    const jobDate = job.d ? new Date(job.d) : null;
+                    const jobDate = job.bd ? new Date(job.bd) : null; // Use billing date
                     return jobDate && jobDate.getFullYear() === currentYear;
                 });
             } else if (timeframe === 'month') {
                 filteredJobs = jobFilesCache.filter(job => {
-                    const jobDate = job.d ? new Date(job.d) : null;
+                    const jobDate = job.bd ? new Date(job.bd) : null; // Use billing date
                     return jobDate && jobDate.getFullYear() === currentYear && jobDate.getMonth() === currentMonth;
                 });
             }
@@ -1406,8 +1406,9 @@
                 if (job.co) {
                     profitByConsignee[job.co] = (profitByConsignee[job.co] || 0) + profit;
                 }
-                if (job.d) {
-                    const month = job.d.substring(0, 7);
+                // *** CHANGED: Group by billing date (bd) instead of job date (d) ***
+                if (job.bd) {
+                    const month = job.bd.substring(0, 7); // YYYY-MM from billing date
                     if (!monthlyStats[month]) {
                         monthlyStats[month] = { profit: 0, count: 0 };
                     }
@@ -1500,7 +1501,7 @@
                         <tbody>${data.profitByUser.slice(0, 5).map(([name, stats]) => `<tr><td>${name}</td><td>${stats.count}</td><td>KD ${stats.profit.toFixed(2)}</td><td><button onclick="showUserJobs('${name}')" class="bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-1 px-2 rounded text-xs">View Jobs</button></td></tr>`).join('')}</tbody></table></div>
                     </div>
                     <div class="lg:col-span-3">
-                        <h4 class="text-lg font-semibold mb-2">Monthly Report</h4>
+                        <h4 class="text-lg font-semibold mb-2">Profit By Month (Based on Billing Date)</h4>
                         <div class="overflow-x-auto"><table class="analytics-table w-full"><thead><tr><th>Month</th><th>Total Jobs</th><th>Total Profit / Loss</th><th>Actions</th></tr></thead>
                         <tbody>${data.monthlyStats.map(([month, stats]) => `<tr><td>${month}</td><td>${stats.count}</td><td>KD ${stats.profit.toFixed(2)}</td><td><button onclick="showMonthlyJobs('${month}')" class="bg-indigo-500 hover:bg-indigo-600 text-white font-bold py-1 px-2 rounded text-xs">View Jobs</button></td></tr>`).join('')}</tbody></table></div>
                     </div>
@@ -2692,7 +2693,8 @@
         
         function showMonthlyJobs(month) {
             currentlyViewedUser = null;
-            const monthlyJobs = jobFilesCache.filter(job => job.d && job.d.startsWith(month));
+            // *** CHANGED: Filter by billing date (bd) instead of job date (d) ***
+            const monthlyJobs = jobFilesCache.filter(job => job.bd && job.bd.startsWith(month));
             const modalTitle = document.getElementById('user-jobs-modal-title');
             const list = document.getElementById('user-jobs-list');
 
